[FI-60] 코드 리팩터링